Remove media query

--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 
 <head>
 
-<title>BioStamp® 3 — The world's most advanced wearable sensor</title>
+<title>BioStamp3™ — The world's most advanced wearable sensor</title>
+
+<meta name="title" content="BioStamp3™ — The world's most advanced wearable sensor</"/> 
+<meta name="description" content="Collect research-grade physiological data for almost any application you can imagine. Start prototyping today with the BioStamp3™ SDK"/>
 
 <link rel="shortcut icon" href="img/favicon.png"/>
 
