--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <div id="main">
 
 <div id="ribbon">
-  <b>Order your SDK:</b> (857) 214-5600 or <a href="mailto:sales@mc10inc.com">sales@mc10inc.com</a>
+  Contact (857) 214-5600 or <a href="mailto:sales@mc10inc.com">sales@mc10inc.com</a> for pricing and partnership opportunities
 </div>
 
 <section class="hero">
@@ -29,7 +29,7 @@
 
   <h2>Plug into the world’s most advanced wearable sensor</h2>
 
-  <p>Collect research-grade physiological data for almost any application you can imagine. Start prototyping today with the <b>BioStamp3™ SDK</b> for only $100 USD.</p>
+  <p>Collect research-grade physiological data for almost any application you can imagine. Start prototyping today with the <b>BioStamp3™ SDK</b>.</p>
 
   <p>Available for Android, iOS, Node.js and Chromium-based web browsers.</p>
 
@@ -47,11 +47,11 @@
       </li>
       <li>
         <img src="img/feature_conformal.svg"/>
-        <p>Conforms to almost any area of the body</p>
+        <p>Conforms to almost any part of the body</p>
       </li>
       <li>
         <img src="img/feature_duration.svg"/>
-        <p>Operates continuously for up to ??? hours</p>
+        <p>Operates continuously for several days</p>
       </li>
       <li>
         <img src="img/feature_streaming.svg"/>
@@ -83,9 +83,7 @@
 
     <h3>Motion</h3>
     <ul>
-      <li>3-axis gyroscope with ranges of ±250 dps, ±500 dps, ±1000 dps, and ±2000 dps</li>
-      <li>3-axis accelerometer with ranges of ±2g, ±4g, ±8g, and ±16g</li>
-      <li>3-axis compass with a wide range to ±4900 µT</li>
+      <li>3-axis gyroscope, accelerometer and compass up to 562 Hz</li>
     </ul>
 
     <h3>AFE</h3>
@@ -96,13 +94,13 @@
 
     <h3>Environment</h3>
     <ul>
-      <li>Temperature with range of –10°C to 100°C, accurate to ±1°C</li>
+      <li>Temperature with range of –10°C to 100°C, accurate to ±2°C</li>
       <li>Piezoresistive pressure sensor (altimeter) with range of 260 to 1260 hPa</li>
     </ul>
 
     <h3>Bioimpedance</h3>
     <ul>
-      <li>Voltage, current, and impedance</li>
+      <li>Electrodermal activity (EDA)</li>
     </ul>
   </div>
 
@@ -164,7 +162,7 @@
     <ul>
       <li><b>1</b> BioStamp® Sensor</li>
       <li><b>1</b> Qi Wireless Charger</li>
-      <li><b>???</b> Adhesives</li>
+      <li><b>42</b> Adhesives</li>
     </ul>
   </div>
 </section>
@@ -173,7 +171,7 @@
   <div>
     <h2>How to buy</h2>
 
-    <p>Call (857) 214-5600 or e-mail <a href="mailto:sales@mc10inc.com">sales@mc10inc.com</a> to order your BioStamp3™ SDK for $100 US.</p>
+    <p>Call (857) 214-5600 or e-mail <a href="mailto:sales@mc10inc.com">sales@mc10inc.com</a> for pricing and partnership opportunities.</p>
   </div>
 
   <img src="img/electrodes.jpg" width="90%"/>
