Add image alt tags

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </div>
 
 <section class="hero">
-  <img src="img/logo.svg" width="250"/>
+  <img src="img/logo.svg" width="250" alt="BioStamp3™ logo"/>
 
   <h1 style="display:none">BioStamp3</h1>
 
@@ -33,7 +33,7 @@
 
   <p>Available for Android, iOS, Node.js and Chromium-based web browsers.</p>
 
-  <img src="img/support.svg" width="150"/>
+  <img src="img/support.svg" width="150" alt="Supported platforms (iOS, Android, Chromium, Node.js)"/>
 </section>
 
 <section>
@@ -42,35 +42,35 @@
 
     <ul class="fgrid">
       <li>
-        <img src="img/feature_config.svg"/>
+        <img src="img/feature_config.svg" aria-hidden="true"/>
         <p>Supports thousands of sensing configurations</p>
       </li>
       <li>
-        <img src="img/feature_conformal.svg"/>
+        <img src="img/feature_conformal.svg" aria-hidden="true"/>
         <p>Conforms to almost any part of the body</p>
       </li>
       <li>
-        <img src="img/feature_duration.svg"/>
+        <img src="img/feature_duration.svg" aria-hidden="true"/>
         <p>Operates continuously for several days</p>
       </li>
       <li>
-        <img src="img/feature_streaming.svg"/>
+        <img src="img/feature_streaming.svg" aria-hidden="true"/>
         <p>Streams data for real-time feedback</p>
       </li>
       <li>
-        <img src="img/feature_waterproof.svg"/>
+        <img src="img/feature_waterproof.svg" aria-hidden="true"/>
         <p>Water resistant</p>
       </li>
       <li>
-        <img src="img/feature_battery.svg"/>
+        <img src="img/feature_battery.svg" aria-hidden="true"/>
         <p>Rechargeable and reusable</p>
       </li>
       <li>
-        <img src="img/feature_home.svg"/>
+        <img src="img/feature_home.svg" aria-hidden="true"/>
         <p>Easy to use at home</p>
       </li>
       <li>
-        <img src="img/feature_activity.svg"/>
+        <img src="img/feature_activity.svg" aria-hidden="true"/>
         <p>Comfortable and unobtrusive during any activity</p>
       </li>
     </ul>
@@ -104,11 +104,11 @@
     </ul>
   </div>
 
-  <img src="img/schematic.png" width="90%"/>
+  <img src="img/schematic.png" width="90%" alt="Schematic drawing of BioStamp3™ sensor"/>
 </section>
 
 <section class="duplex">
-  <img src="img/body.jpg" width="90%"/>
+  <img src="img/body.jpg" width="90%" alt="BioStamp3™ sensor on body"/>
 
   <div>
     <h2>Applications</h2>
@@ -135,7 +135,7 @@
     </ul>
   </div>
 
-  <img src="img/code.jpg" width="90%"/>
+  <img src="img/code.jpg" width="90%" alt="JavaScript code sample"/>
 </section>
 
 <section class="duplex">
@@ -152,7 +152,7 @@
 </section>
 
 <section class="duplex">
-  <img src="img/kit.jpg" width="90%"/>
+  <img src="img/kit.jpg" width="90%" alt="BioStamp3™ sensor and Qi charger"/>
 
   <div>
     <h2>What’s in the box</h2>
@@ -160,7 +160,7 @@
     <p>The BioStamp3™ SDK includes the following components to get you up and running:</p>
 
     <ul>
-      <li><b>1</b> BioStamp® Sensor</li>
+      <li><b>1</b> BioStamp3™ Sensor</li>
       <li><b>1</b> Qi Wireless Charger</li>
       <li><b>42</b> Adhesives</li>
     </ul>
@@ -174,11 +174,11 @@
     <p>Call (857) 214-5600 or e-mail <a href="mailto:sales@mc10inc.com">sales@mc10inc.com</a> for pricing and partnership opportunities.</p>
   </div>
 
-  <img src="img/electrodes.jpg" width="90%"/>
+  <img src="img/electrodes.jpg" width="90%" alt="Back side of BioStamp3™ sensor"/>
 </section>
 
 <section class="duplex">
-  <img src="img/about.jpg" width="90%"/>
+  <img src="img/about.jpg" width="90%" alt="Box with MC10 logo"/>
 
   <div>
     <h2>About MC10</h2>
