--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <div>
     <h2>Sensor features</h2>
 
-    <ul class="fgrid">
+    <ul class="features">
       <li>
         <img src="img/feature_config.svg" aria-hidden="true"/>
         <p>Supports thousands of sensing configurations</p>
